change template to mine

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -6,19 +6,13 @@
 
 	<div class="col-sm-10">
 	 <span class="post-date">
-	   {% assign d = page.date | date: "%d" | plus:'0' %}
-	   {{ page.date | date: "%B" }}
-	   {% case d %}
-	     {% when 1 or 21 or 31 %}{{ d }}st,
-	     {% when 2 or 22 %}{{ d }}nd,
-	     {% when 3 or 23 %}{{ d }}rd,
-	     {% else %}{{ d }}th,
-	   {% endcase %}
-	   {{ page.date | date: "%Y" }}
+       {{ post.date | date: "%Y年%m月%d日" }}
 	 </span>
 	  <div class="article_body">
 	  {{ content }}
 	  </div>
+
+      <hr>
 
 		{% unless page.categories == empty %}
 		<ul class="tag_box list-unstyled list-inline">
@@ -73,26 +67,31 @@
 
 		<div>
       <section class="share col-sm-6">
-        <h4 class="section-title">Share Post</h4>
-        <a class="btn btn-default btn-sm twitter" href="http://twitter.com/share?text={{page.title | encode}}{% if site.author.twitter%}&via={{site.author.twitter}}{% endif %}"
-           onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-          <i class="fa fa-twitter fa-lg"></i>
+        <h4 class="section-title">分享至：</h4>
+        <a class="btn btn-default btn-sm facebook" href="https://wx.qq.com/"
+           onclick="window.open(this.href, 'wechat-share','width=580,height=296');return false;">
+          <i class="fa fa-wechat fa-lg"></i>
           微信
         </a>
-        <a class="btn btn-default btn-sm gplus"
-           onclick="window.open('https://plus.google.com/share?url='+window.location.href, 'google-plus-share', 'width=490,height=530');return false;">
-          <i class="fa fa-google-plus fa-lg"></i>
+        <a class="btn btn-default btn-sm weibo"
+           onclick="window.open('http://service.weibo.com/share/share.php?url='+window.location.href, 'weibo-share', 'width=490,height=530');return false;">
+          <i class="fa fa-weibo fa-lg"></i>
           微博
         </a>
-        <a class="btn btn-default btn-sm facebook" href="https://www.facebook.com/sharer/sharer.php"
-           onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-          <i class="fa fa-facebook fa-lg"></i>
-          Facebook
+        <a class="btn btn-default btn-sm qzone"
+           onclick="window.open('http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url='+window.location.href+'&title=来自 Jie Cheng', 'qzone-share', 'width=490,height=530');return false;">
+          <i class="fa fa-qq fa-lg"></i>
+          QQ空间
+        </a>
+        <a class="btn btn-default btn-sm facebook"
+           onclick="window.print();return false;">
+          <i class="fa fa-file-pdf-o fa-lg"></i>
+          保存
         </a>
       </section>
 
       <section class="col-sm-6 author">
-        <img src="assets/logo.jpg" class="img-circle" />
+        <img src="{{ site.BASE_PATH }}/assets/logo.jpg" class="img-circle" />
         <h4 class="section-title author-name">{{site.author.name}}</h4>
         <p class="author-bio">{{site.author.bio}}</p>
       </section>
@@ -102,14 +101,14 @@
 
 		<ul class="pager">
 		  {% if page.previous %}
-		  <li class="previous"><a href="{{ site.BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+		  <li class="previous"><a href="{{ site.BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; 上一页</a></li>
 		  {% else %}
-		  <li class="previous disabled"><a>&larr; Previous</a></li>
+		  <li class="previous disabled"><a>&larr; 上一页</a></li>
 		  {% endif %}
 		  {% if page.next %}
-		  <li class="next"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+		  <li class="next"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">下一页 &rarr;</a></li>
 		  {% else %}
-			<li class="next disabled"><a>Next &rarr;</a>
+			<li class="next disabled"><a>下一页 &rarr;</a>
 		  {% endif %}
 		</ul>
 
