--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta property="wb:webmaster" content="5611fb65f07db9a6" />
 	<title>{{ page.title }}</title>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
@@ -18,7 +19,8 @@
 
 	<!-- Le styles -->
 	<link href="{{ site.BASE_PATH }}/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 
@@ -48,9 +50,9 @@
 				<i class="fa fa-github"></i>
 			</a>
 			{% endif %}
-			{% if site.author.jianshu %}
-			<a type="button" class="navbar-toggle nav-link" href="http://www.jianshu.com/{{ site.author.jianshu }}">
-				<i class="fa fa-twitter"></i>
+			{% if site.author.weibo %}
+			<a type="button" class="navbar-toggle nav-link" href="http://weibo.com/{{ site.author.weibo }}">
+				<i class="fa fa-weibo"></i>
 			</a>
 			{% endif %}
 			{% if site.author.email %}
@@ -70,6 +72,7 @@
 				<li class="active"><a href="{{ site.BASE_PATH }}/">Home</a></li>
 				<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">Categories</a></li>
 				<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">Tags</a></li>
+				<li><a href="{{ site.BASE_PATH}}/{{ site.resume_path }}">Resume</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
@@ -83,6 +86,7 @@
 			<li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i>Home</a></li>
 			<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i>Categories</a></li>
 			<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i>Tags</a></li>
+			<li><a href="{{ site.BASE_PATH}}/{{ site.resume_path }}"><i class="fa fa-user"></i>Resume</a></li>
 			<li class="divider"></li>
 			<li><a href="#"><i class="fa fa-arrow-up"></i>Top of Page</a></li>
 		</ul>
