--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <!-- sidebar.html -->
 <header class="sidebar-header" role="banner">
-	<a href="{{ site.BASE_PATH }}/">
-		<img src="assets/logo.jpg" class="img-circle" />
-	</a>
+	<!-- <a href="{{ site.BASE_PATH }}/"> -->
+		<img src="{{ site.BASE_PATH }}/assets/logo.jpg" class="img-circle" />
+	<!-- </a> -->
 	<h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
     </h3>
@@ -19,7 +19,7 @@
 		{% if site.author.github %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i>
+				<i class="fa fa-github fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
@@ -37,12 +37,19 @@
 			</a>
 		</li>
 		{% endif %}
-	</ul>
-	<ul id="contact-list-secondary" class="list-unstyled list-inline">
 		{% if site.author.jianshu %}
 		<li>
 			<a class="btn btn-default btn-sm" href="http://www.jianshu.com/{{ site.author.jianshu }}">
-				<i class="fa fa-twitter fa-lg"></i>
+				<i class="fa fa-book fa-lg"></i>
+			</a>
+		</li>
+		{% endif %}
+	</ul>
+	<ul id="contact-list-secondary" class="list-unstyled list-inline">
+		{% if site.author.weibo %}
+		<li>
+			<a class="btn btn-default btn-sm" href="http://weibo.com/{{ site.author.weibo }}">
+				<i class="fa fa-weibo fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
