--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,6 +46,13 @@
 		{% endif %}
 	</ul>
 	<ul id="contact-list-secondary" class="list-unstyled list-inline">
+		{% if site.author.wechat %}
+		<li>
+			<a class="btn btn-default btn-sm" href="http://upload.jianshu.io/users/qrcodes/1887477/motionGrid.jpg?imageMogr/thumbnail/320x320/quality/100">
+				<i class="fa fa-wechat fa-lg"></i>
+			</a>
+		</li>
+		{% endif %}
 		{% if site.author.weibo %}
 		<li>
 			<a class="btn btn-default btn-sm" href="http://weibo.com/{{ site.author.weibo }}">
